The DiagramConverters convert the model.graph to an adjacency list with the corresponding vertices and their arcs Changed the save && load diagram methods in ClassDiagram && PackageDiagram in order to serialize and deserialize the objects in the adjacency list created by the corresponding GraphDiagramConverter Added tests for the new JavaFXDiagramExporter && JavaFXDiagramLoader classes Fixed the test folder hierarchy to match main Separated tests for package and class diagrams